--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-ensure-login": "^0.1.1",
-    "ejs": "^2.6.2", 
+    "cookie-session": "^2.0.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
     "morgan": "^1.9.1",
@@ -20,4 +21,3 @@
     "passport-local": "^1.0.0"
   }
 }
-
